--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="it">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/logo.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/src/assets/circular_logo.svg"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600&family=Roboto:wght@700&display=swap"
